--- a/roles/media-server/templates/sabnzbd.yaml
+++ b/roles/media-server/templates/sabnzbd.yaml
@@ -55,7 +55,7 @@ spec:
         - name: app-template.controllers.main.initContainers.config-fix.command[1]
           value: "-c"
         - name: app-template.controllers.main.initContainers.config-fix.command[2]
-          value: 'if test -f /config/sabnzbd.ini; then sed -i "s/^host_whitelist.*/host_whitelist = sabnzbd.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/" /config/sabnzbd.ini; fi'
+          value: 'if test -f /config/sabnzbd.ini; then sed -i "s/^host_whitelist.*/host_whitelist = sabnzbd.sabnzbd,sabnzbd.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/" /config/sabnzbd.ini; fi'
         - name: app-template.controllers.main.initContainers.config-fix.securityContext.readOnlyRootFilesystem
           value: 'true'
         - name: app-template.controllers.main.initContainers.config-fix.securityContext.runAsUser
