--- a/charts/rtl433/values.yaml
+++ b/charts/rtl433/values.yaml
@@ -21,7 +21,7 @@ app-template:
             tag: latest
             pullPolicy: Always
           args:
-           - -S all
+#           - -S all
            - -v
            - -M level
            - -f 315000000 
@@ -44,7 +44,7 @@ app-template:
             tag: latest
             pullPolicy: Always
           args:
-           - -S all
+#           - -S all
            - -v
            - -M level
            - -f 433000000 
