--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -40,8 +40,9 @@
             ]
         }
     ],
-    "enabledManagers":
-    ["github-actions",
-    "custom.regex",
-    "helmv3"]
+    "enabledManagers": [
+        "github-actions",
+        "custom.regex",
+        "helmv3"
+    ]
 }
