--- a/charts/monica/Chart.yaml
+++ b/charts/monica/Chart.yaml
@@ -10,4 +10,4 @@ maintainers:
 dependencies:
   - name: monica
     version: "0.9.0"
-    repository: "oci://ghcr.io/gabe565/charts/monica"
+    repository: "oci://ghcr.io/gabe565/charts"
