--- a/charts/monica/values.yaml
+++ b/charts/monica/values.yaml
@@ -72,6 +72,7 @@ monica:
       retain: true
       storageClass: "synology-iscsi"
       size: 16Gi
+      accessMode: ReadWriteOnce
 
   # -- Enable and configure mariadb database subchart under this key.
   #    [[ref]](https://github.com/bitnami/charts/tree/master/bitnami/mariadb)
