--- a/charts/monica/values.yaml
+++ b/charts/monica/values.yaml
@@ -102,15 +102,11 @@ monica:
         storageClass: "synology-iscsi"
         size: 16Gi
     serviceAccount:
-      # -- Specifies whether a service account should be created
-      create: false
-
-      # -- Annotations to add to the service account
+      create: true
       annotations: {}
+      name: "monica-db-sa"
+      rbac.create: true
 
-      # -- The name of the service account to use.
-      # If not set and create is true, a name is generated using the fullname template
-      name: "monica-sa"
   nginx:
     # -- Enable the Nginx sidecar.
     #    Disable this if you use an apache image.
