--- a/charts/monica/templates/scc.yaml
+++ b/charts/monica/templates/scc.yaml
@@ -13,3 +13,4 @@ supplementalGroups:
   type: RunAsAny
 users:
 - system:serviceaccount:{{.Release.Namespace}}:monica-sa
+- system:serviceaccount:{{.Release.Namespace}}:monica-db-sa
