--- a/charts/node-red/templates/configmap.yaml
+++ b/charts/node-red/templates/configmap.yaml
@@ -43,7 +43,7 @@ data:
         tours: false,
 
         projects: {
-          enabled: false,
+          enabled: true,
           workflow: {
             mode: "manual",
           },
