--- a/roles/utilities/templates/changedetection.yaml
+++ b/roles/utilities/templates/changedetection.yaml
@@ -35,7 +35,7 @@ spec:
         - name: application.name
           value: changedetection
         - name: application.group
-          value: Utilities
+          value: Automation
         - name: application.icon
           value: magnify
         - name: application.image
