--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -17,6 +17,24 @@ app-template:
             pullPolicy: Always
           env:
             TZ: TIMEZONE
+          startupProbe:
+            httpGet:
+              path: /
+              port: 3000
+            failureThreshold: 3
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 5
+            timeoutSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 5
+            timeoutSeconds: 10
 
   serviceAccount:
     name: hajimari-sa
