--- a/roles/base-cluster/templates/hajimari-apps.yaml
+++ b/roles/base-cluster/templates/hajimari-apps.yaml
@@ -25,7 +25,7 @@ spec:
 apiVersion: hajimari.io/v1alpha1
 kind: Application
 metadata:
-  name: github
+  name: gitops
   namespace: hajimari
 spec:
   name: GitOps
