--- a/roles/utilities/templates/node-red.yaml
+++ b/roles/utilities/templates/node-red.yaml
@@ -34,18 +34,9 @@ spec:
 
         # renovate custom-docker versioning=semver
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/gchq/cyberchef
+          value: docker.io/nodered/node-red
         - name: app-template.controllers.main.containers.main.image.tag
-          value: 10.18.6
-        - name: app-template.controllers.main.containers.main.image.pullPolicy
-          value: IfNotPresent
-        - name: app-template.controllers.main.containers.main.env.TZ
-          value: America/New_York
-
-        - name: app-template.defaultPodOptions.securityContext.runAsUser
-          value: "0"
-        - name: app-template.defaultPodOptions.securityContext.runAsGroup
-          value: "0"
+          value: 3.1.9
 
   syncPolicy:
     automated:
