--- a/charts/clusterplex/templates/clusterplex-worker.yaml
+++ b/charts/clusterplex/templates/clusterplex-worker.yaml
@@ -76,11 +76,11 @@ spec:
           requests:
             cpu: 500m
             memory: 200Mi
-            gpu.intel.com/i915: 1
+#            gpu.intel.com/i915: 1
           limits:
             cpu: 3000m
             memory: 800Mi
-            gpu.intel.com/i915: 1
+#            gpu.intel.com/i915: 1
       volumes:
       - name: data
         persistentVolumeClaim:
