--- a/charts/monica/values.yaml
+++ b/charts/monica/values.yaml
@@ -21,7 +21,7 @@ monica:
   #
 
   image:
-    # renovate docker
+    # renovate: docker-image versioning=loose
     repository: monica
     tag: 4.1.2-fpm-alpine
     pullPolicy: IfNotPresent
