--- a/charts/node-red/values.yaml
+++ b/charts/node-red/values.yaml
@@ -29,7 +29,7 @@ app-template:
       containers:
         main:
           image:
-            # renovate: docker-image versioning=loose
+            # renovate: docker-image
             repository: docker.io/nodered/node-red
             tag: 3.1.9
             pullPolicy: Always
