--- a/roles/utilities/templates/changedetection.yaml
+++ b/roles/utilities/templates/changedetection.yaml
@@ -45,6 +45,7 @@ spec:
         - name: app-template.service.main.ports.http.port
           value: '5000'
 
+        # renovate custom-docker versioning=loose
         - name: app-template.controllers.main.containers.main.image.repository
           value: ghcr.io/dgtlmoon/changedetection.io
         - name: app-template.controllers.main.containers.main.image.tag
