--- a/charts/clusterplex/templates/clusterplex-config-pvc.yaml
+++ b/charts/clusterplex/templates/clusterplex-config-pvc.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: clusterplex-config-pvc
     app.kubernetes.io/part-of: clusterplex
+    kasten/backup: "true"
 spec:
   accessModes:
   - ReadWriteOnce
