try disabling gaps

--- a/clusters/openshift.ullberg.family/templates/media-server.yaml
+++ b/clusters/openshift.ullberg.family/templates/media-server.yaml
@@ -41,6 +41,9 @@ spec:
         - name: media.nfs.path
           value: {{ .Values.media.nfs.path }}
 
+        - name: applications.gaps
+          value: false
+
   syncPolicy:
     automated:
       selfHeal: true
