--- a/clusters/openshift.ullberg.family/templates/media-server.yaml
+++ b/clusters/openshift.ullberg.family/templates/media-server.yaml
@@ -41,7 +41,7 @@ spec:
         - name: media.nfs.path
           value: {{ .Values.media.nfs.path }}
 
-        - name: applications.gaps
+        - name: applications.kavita
           value: false
 
   syncPolicy:
