--- a/roles/media-server/templates/kavita.yaml
+++ b/roles/media-server/templates/kavita.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.kavita.enabled }}
+{{ if .Values.applications.kavita }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
