--- a/roles/media-server/templates/plex.yaml
+++ b/roles/media-server/templates/plex.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.applications.plex }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -38,3 +39,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+{{ end }}
