--- a/roles/media-server/templates/sabnzbd.yaml
+++ b/roles/media-server/templates/sabnzbd.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.applications.sabnzbd }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -93,3 +94,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+{{ end }}
