--- a/roles/media-server/templates/sonarr.yaml
+++ b/roles/media-server/templates/sonarr.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.applications.sonarr }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -75,3 +76,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+{{ end }}
