--- a/roles/base-cluster/values.yaml
+++ b/roles/base-cluster/values.yaml
@@ -35,6 +35,8 @@ backup:
     path: /my-backups
 
 network:
+  lan:
+    defaultGW: 192.168.0.1
   node0:
     name: master-0
     storageInterface:
