--- a/charts/keepalived-operator-config/templates/scc.yaml
+++ b/charts/keepalived-operator-config/templates/scc.yaml
@@ -12,6 +12,7 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 allowPrivilegedContainer: true
+allowHostNetwork: true
 allowHostDirVolumePlugin: true
 allowPrivilegeEscalation: true
 users:
