--- a/charts/keepalived-operator-config/templates/scc.yaml
+++ b/charts/keepalived-operator-config/templates/scc.yaml
@@ -13,6 +13,7 @@ supplementalGroups:
   type: RunAsAny
 allowPrivilegedContainer: true
 allowHostNetwork: true
+allowHostPorts: true
 allowHostDirVolumePlugin: true
 allowPrivilegeEscalation: true
 users:
