--- a/roles/media-server/templates/sabnzbd.yaml
+++ b/roles/media-server/templates/sabnzbd.yaml
@@ -43,6 +43,8 @@ spec:
           value: 'https://raw.githubusercontent.com/sabnzbd/sabnzbd/develop/icons/logo-arrow.svg'
         - name: application.description
           value: "Efficient Usenet downloader"
+        - name: application.location
+          value: '100'
         - name: app-template.service.main.ports.http.port
           value: '8080'
 
