--- a/charts/mosquitto/templates/service-account.yaml
+++ b/charts/mosquitto/templates/service-account.yaml
@@ -1,5 +1,6 @@
+{{ $at := index .Values "app-template" }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: mosquitto-sa
+  name: {{ $at.serviceAccount.name }}
