--- a/charts/mosquitto/templates/scc.yaml
+++ b/charts/mosquitto/templates/scc.yaml
@@ -1,3 +1,4 @@
+{{ $at := index .Values "app-template" }}
 ---
 kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
@@ -12,4 +13,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:{{.Release.Namespace}}:mosquitto-sa
+- system:serviceaccount:{{.Release.Namespace}}:{{ $at.serviceAccount.name }}
