--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -36,14 +36,15 @@ app-template:
                 failureThreshold: 30
                 periodSeconds: 5
       statefulset:
-        volumeClaimTemplates:
-        - name: data
-          labels: {}
-          annotations: {}
-          globalMounts:
-            - path: /data
-          accessMode: "ReadWriteOnce"
-          size: 10Gi
+        template:
+          volumeClaimTemplates:
+          - name: data
+            labels: {}
+            annotations: {}
+            globalMounts:
+              - path: /data
+            accessMode: "ReadWriteOnce"
+            size: 10Gi
   service:
     main:
       controller: main
