--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -48,8 +48,7 @@ app-template:
     main:
       controller: main
       labels:
-        keepalived-operator.redhat-cop.io/keepalivedgroup: >-
-          "keepalived-operator/lan"
+        keepalived-operator.redhat-cop.io/keepalivedgroup: '''keepalived-operator/lan'''
       annotations:
         coredns.io/hostname: mqtt
       externalIPs:
