--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -47,8 +47,8 @@ app-template:
   service:
     main:
       controller: main
-      labels:
-        keepalived-operator.redhat-cop.io/keepalivedgroup: "'\"ports\": {\"88\":\"sandbox-backendconfig\"}}'"
+      #labels:
+        #keepalived-operator.redhat-cop.io/keepalivedgroup: "keepalived-operator/lan"
       annotations:
         coredns.io/hostname: mqtt
       externalIPs:
