--- a/charts/mosquitto/templates/mqtt-service.yaml
+++ b/charts/mosquitto/templates/mqtt-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: mqtt
   labels:
-    keepalived-operator.redhat-cop.io/keepalivedgroup: "keepalived-operator/lan"
+    keepalived-operator.redhat-cop.io/keepalivedgroup: {{ "keepalived-operator/lan" | quote }}
   annotations:
     coredns.io/hostname: mqtt
 spec:
