--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -11,7 +11,6 @@ app-template:
   controllers:
     main:
       type: statefulset
-      replicas: 2
       strategy: RollingUpdate
       annotations:
         reloader.stakater.com/auto: "true"
@@ -29,7 +28,7 @@ app-template:
           args:
           - sh
           - -c
-          - exec mosquitto -c "/config/$(hostname).conf"
+          - exec mosquitto -c "/config/mosquitto.conf"
           probes:
             liveness:
               enabled: true
@@ -40,15 +39,6 @@ app-template:
               spec:
                 failureThreshold: 30
                 periodSeconds: 5
-      statefulset:
-        volumeClaimTemplates:
-          - name: data
-            labels: {}
-            annotations: {}
-            globalMounts:
-              - path: /data
-            accessMode: "ReadWriteOnce"
-            size: 10Gi
   service:
     main:
       controller: main
@@ -61,6 +51,12 @@ app-template:
     config:
       name: mosquitto-config
       type: configMap
+
+    data:
+      enabled: true
+      existingClaim: mosquitto-data-volume
+      globalMounts:
+        - path: /data
 
   defaultPodOptions:
     securityContext:
