dont show search in an effort to remove scroll bars

--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -71,6 +71,7 @@ hajimari:
     showAppUrls: false
     showBookmarkGroups: true
     showGlobalBookmarks: true
+    showSearch: false
     alwaysTargetBlank: false
     targetBlank: false
     name: "friend"
