--- a/roles/home-automation/templates/home-assistant.yaml
+++ b/roles/home-automation/templates/home-assistant.yaml
@@ -33,7 +33,7 @@ spec:
           value: {{ .Values.media.nfs.path }}
 
         - name: application.name
-          value: Home Assistant
+          value: Home Automation
         - name: application.group
           value: Home Automation
         - name: application.icon
