--- a/charts/zwavejs2mqtt/templates/scc.yaml
+++ b/charts/zwavejs2mqtt/templates/scc.yaml
@@ -2,7 +2,7 @@
 kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
-  name: hajimari-scc
+  name: zwavejs2mqtt-scc
 fsGroup:
   type: RunAsAny
 runAsUser:
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:{{.Release.Namespace}}:hajimari-sa
+- system:serviceaccount:{{.Release.Namespace}}:zwavejs2mqtt-sa
