--- a/charts/zwavejs2mqtt/templates/scc.yaml
+++ b/charts/zwavejs2mqtt/templates/scc.yaml
@@ -11,5 +11,10 @@ seLinuxContext:
   type: RunAsAny
 supplementalGroups:
   type: RunAsAny
+allowPrivilegedContainer: true
+allowHostNetwork: true
+allowHostPorts: true
+allowHostDirVolumePlugin: true
+allowPrivilegeEscalation: true
 users:
 - system:serviceaccount:{{.Release.Namespace}}:zwavejs2mqtt-sa
