--- a/roles/home-automation/templates/zwavejs2mqtt.yaml
+++ b/roles/home-automation/templates/zwavejs2mqtt.yaml
@@ -50,7 +50,7 @@ spec:
         - name: app-template.persistence.data.existingClaim
           value: zwavejs2mqtt-data-volume
         - name: app-template.persistence.config.existingClaim
-          value: home-assistant-config
+          value: zwavejs2mqtt-config
 
 
   syncPolicy:
