--- a/charts/zwavejs2mqtt/values.yaml
+++ b/charts/zwavejs2mqtt/values.yaml
@@ -1,3 +1,7 @@
+storage:
+  config:
+    storageClassName: local-path
+
 app-template:
   controllers:
     main:
@@ -56,7 +60,6 @@ app-template:
       existingClaim: zwavejs2mqtt-config-pvc
       globalMounts:
         - path: /usr/src/app/store
-      storageClassName: synology-iscsi
 
     dev:
       enabled: true
